--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Immortality'
 - !lcc 'BT'
+- GITenberg
 title: An Essay on the Scriptural Doctrine of Immortality
 url: http://www.gutenberg.org/ebooks/27237
